Fixed overflow on home

--- a/css/index.css
+++ b/css/index.css
@@ -246,9 +246,11 @@
     }
 
     .traveltextsection {
-        display: block;
-        height: 80%;
-        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 90%;
+        width: 90%;
         background-color: white;
         padding: 5%;
         border: black 3px solid;
